Add whole crud operation for users. ready for test
